syntax = "proto3";

package user;

import "proto/common/common.proto";

option go_package = "github.com/Riku-KANO/kube-ec/proto/user";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUser(GetUserRequest) returns (User);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  common.Address address = 4;
  string phone_number = 5;
  common.Timestamp created_at = 6;
  common.Timestamp updated_at = 7;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string phone_number = 4;
}

message RegisterResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  common.Address address = 3;
  string phone_number = 4;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
  string user_id = 2;
}
